Bugfix: Add 'display: flex' to avoid content overflow on scrollbar

--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@
  */
 
 body {
-	font-family: 'Roboto', sans-serif;
-	text-transform: uppercase;
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+    display: flex;
     margin: 0;
     height: 100vh;
 }
@@ -22,17 +23,22 @@ main {
     background-color: #ecf0f1;
 }
 
-header, main { height: 100vh; }
+header, main {
+  height: 100vh;
+  flex-shrink: 0;
+}
 
 @media screen and (max-width: 890px) {
     header {
         height: 150px;
         padding-top: 1.4em;
     }
+    body { flex-direction: column; }
 }
 
 @media screen and (min-width: 891px) {
-    header, main { float: left; }
+    /* header, main { float: left; } */
+    body { flex-direction: row; }
 
     header { width: 22vw; }
 
